# gps-tracker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CODEOWNERS  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest-coverage.txt
.github/workflows/: coverage.yml  deploy.yml  deployment.yml  lint.yml  test.yml  tests.yml
gps_tracker/: __init__.py  auth.py  discord.py  discord_embed.py  main.py  mongo.py  settings.py
gps_tracker/endpoints/: health.py  location.py
scripts/: install.sh  requirements-dev.txt  run.sh  setup.js
tests/: auth_test.py  conftest.py  mongo_test.py  settings_test.py  test_auth.py  test_discord.py  test_mongo.py  test_settings.py
tests/endpoints/: health_test.py  location_test.py  test_health.py  test_location.py
