[build-system]
requires = ["poetry>=1.1.11", "setuptools"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "gps-tracker"
version = "1.0.0"
description = "API to interact with GPS Logger requests"
authors = ["TheSammy2010"]
readme = "README.md"
homepage = "https://github.com/TheSammy2010/gps-tracker"
repository = "https://github.com/TheSammy2010/gps-tracker"
documentation = "https://github.com/TheSammy2010/gps-tracker/README.md"


# Requirements
[tool.poetry.dependencies]
python = ">=3.10, <4"
setuptools = "59.2.0"
flask = "2.0.2"
flask_restful = "0.3.9"
waitress = "2.0.0"
requests = "2.26.0"
pymongo = { version = "3.12.1", extras = ["srv"] }


[tool.black]
line-length = 120
verbose = true
target-version = ["py310"]
exclude = "venv"


# mypy doesn't yet work on python 3.10
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true


[tool.coverage.run]
source = ["gps_tracker"]
relative_files = true


[tool.pytest.ini_options]
markers = [
    "integration",
    "unit",
    "all"
]
testpaths = ["tests"]
